.svn/pristine/63/6325d74786ce69b9435aaccbae765a447f8a20e1.svn-base
System.register([], function (_export, _context) {
  "use strict";

  return {
    setters: [],
    execute: function () {
      // This module is auto-generated to report error emitted when try to load module file:///G:/Work/cocoscreator/svn/MiniGame/assets/script/TestScene.ts at runtime.
      throw new Error(`SyntaxError: C:\CocosDashboard_2.0.1\file:\G:\Work\cocoscreator\svn\MiniGame\assets\script\TestScene.ts: Identifier 'btnPlay' has already been declared. (14:12)

  12 |         });
  13 |
> 14 |         let btnPlay = this.node.getChildByName("btnPlay");
     |             ^
  15 |         btnPlay.on(Button.EventType.CLICK,function(){
  16 |             Mgr.soundMgr.play("bgm1");
  17 |         });`);
    }
  };
});
//# sourceMappingURL=fb20a8e333b16a0e1f19bcdff1ee753581cdef8e.js.map